// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom embeds and assets > should render video, image, and audio assets 1`] = `
<body>
  <div>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <div>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <div>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <div>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <div>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <div>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <div>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <div>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > removes the width and height attributes if they are set to 0 1`] = `
<body>
  <img
    loading="eager"
    title="logo.svg"
  />
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders class 1`] = `
<body>
  <div
    class="test"
  >
    <p>
      wow
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      
    </p>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders class with custom renderer 1`] = `
<body>
  <section
    class="bg-white"
  >
    <p>
      wow
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      
    </p>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
  </section>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders content 1`] = `
<body>
  <p>
    <b>
      Hello World!
      <!---->
      
      <!---->
    </b>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </p>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders content correctly if received a object with children 1`] = `
<body>
  <p>
    <b>
      Hello World!
      <!---->
      
      <!---->
    </b>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </p>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders iframe 1`] = `
<body>
  <div
    style="position: relative; overflow: hidden; width: 100%; padding-top: 56.25%;"
  >
    <iframe
      allow="fullscreen"
      frameborder="0"
      loading="lazy"
      referrerpolicy="no-referrer"
      src="https://www.youtube.com/watch?v=Ylmd737tw5w"
      style="position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px; width: 100%; height: 100%;"
    />
  </div>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders image 1`] = `
<body>
  <img
    alt="photo-1564631027894-5bdb17618445.jpg"
    height="1000"
    loading="eager"
    title="photo-1564631027894-5bdb17618445.jpg"
    width="667"
  />
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders inline content 1`] = `
<body>
  <p>
    <b>
      Hey, 
      <!---->
      
      <!---->
    </b>
    <!---->
    
    <!---->
    
    <i>
      how
      <!---->
      
      <!---->
    </i>
    <!---->
    
    <!---->
    
    <u>
      are
      <!---->
      
      <!---->
    </u>
    <!---->
    
    <!---->
    
    <code>
      you?
      <!---->
      
      <!---->
    </code>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </p>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders inline content with custom renderers 1`] = `
<body>
  <p
    class="text-white"
  >
    <strong
      class="text-black"
    >
      <!---->
    </strong>
    <!---->
    
    <!---->
    
    <i
      class="italic-class"
      style="color: red;"
    >
      <!---->
    </i>
    <!---->
    
    <!---->
    
    <u
      role="button"
    >
      <!---->
       test
    </u>
    ,
    <!---->
    
    <!---->
    
    <code>
      you?
      <!---->
      
      <!---->
    </code>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
  </p>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders link 1`] = `
<body>
  <a
    class="text-white"
    href="https://hygraph.com"
    id="test"
    rel="noreferrer"
    target="_blank"
    title="Hygraph website"
  >
    Hygraph
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
  </a>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders lists 1`] = `
<body>
  <ul>
    <li>
      <div>
        Embroided logo
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        
      </div>
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      
    </li>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <li>
      <div>
        Fits well
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        
      </div>
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      
    </li>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <li>
      <div>
        Comes in black
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        
      </div>
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      
    </li>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <li>
      <div>
        Reasonably priced
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        
      </div>
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      
    </li>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </ul>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > renders video 1`] = `
<body>
  <video>
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </video>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > should render a table 1`] = `
<body>
  <table>
    <thead>
      <tr>
        <th>
          <p>
            Row 1 - Header 1
            <!---->
            
            <!---->
            
            <!---->
            
            <!---->
            
            <!---->
            
            
          </p>
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          
        </th>
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <th>
          <p>
            Row 1 - Header 2
            <!---->
            
            <!---->
            
            <!---->
            
            <!---->
            
            <!---->
            
            
          </p>
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          
        </th>
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        
      </tr>
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      
    </thead>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <tbody>
      <tr>
        <td>
          <p>
            Row 2 - Col 1
            <!---->
            
            <!---->
            
            <!---->
            
            <!---->
            
            <!---->
            
            
          </p>
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          
        </td>
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <td>
          <p>
            Row 2 - Col 2
            <!---->
            
            <!---->
            
            <!---->
            
            <!---->
            
            <!---->
            
            
          </p>
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          <!---->
          
          
        </td>
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        <!---->
        
        
      </tr>
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      <!---->
      
      
    </tbody>
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </table>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > should render empty text spaces 1`] = `
<body>
  <p>
    Sweet black 
    <!---->
    
    <!---->
    
    <!---->
    
    <b>
      cap
      <!---->
      
      <!---->
    </b>
    <!---->
    
    <!---->
    
     
    <!---->
    
    <!---->
    
    <!---->
    
    <u>
      with
      <!---->
      
      <!---->
    </u>
    <!---->
    
    <!---->
    
     
    <!---->
    
    <!---->
    
    <!---->
    
    <i>
      embroidered
      <!---->
      
      <!---->
    </i>
    <!---->
    
    <!---->
    
     
    <!---->
    
    <!---->
    
    <!---->
    
    <b>
      Hygraph
      <!---->
      
      <!---->
    </b>
    <!---->
    
    <!---->
    
     logo.
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </p>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > should replace all 
 in a string with <br /> elements 1`] = `
<body>
  <p>
    Hello, 
    <!---->
    ⁠My name is joão pedro, 
    <br />
    <!---->
    ⁠I'm testing a bug 
    <br />
    <!---->
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </p>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;

exports[`rich-text-svelte-renderer > should should render H1 with some text 1`] = `
<body>
  <h1>
    heading
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    <!---->
    
    
  </h1>
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  <!---->
  
  
</body>
`;
